# sbwg

./: .gitignore  Cargo.toml  DESIGN.md
binaries/sbwg/: Cargo.toml
binaries/sbwg/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: entities.rs  hud.rs  lib.rs  main.rs  player_input.rs  world.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/sim/: Cargo.toml
crates/sim/src/: caravan.rs  economy.rs  entity.rs  lib.rs  manpower.rs  map.rs  messages.rs  path.rs  population.rs  setup.rs
